Remove unused logging in AprilTagVision and simplify logging conditions